# keystone-sdk

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  loader.cmake  macros.cmake
.circleci/: config.yml
examples/: CMakeLists.txt  keystone.cmake
examples/attestation/: CMakeLists.txt
examples/attestation/host/: host.h  verifier.h
examples/ceasar_cipher/: vault.sh
examples/ceasar_cipher/eapp/: Makefile  app.lds  eapp.c
examples/ceasar_cipher/host/: Makefile  host.cpp
examples/hello/: CMakeLists.txt
examples/hello-native/: CMakeLists.txt
examples/hello-native/host/: host_native.cpp
examples/hello/eapp/: hello.c
examples/hello/eapp/sqlite/: sqlite_test.c
examples/hello/host/: host.cpp
examples/library-enclave/: CMakeLists.txt
examples/library-enclave/host/: host.cpp
examples/sqlite/: CMakeLists.txt
examples/sqlite/eapp/: sqlite_test.c
examples/sqlite/host/: host.cpp
examples/tests/: CMakeLists.txt  Makefile  edge_wrapper.cpp  test-runner.cpp
examples/tests/fork/: fork.c
examples/tests/grantee/: grantee.c
examples/tests/granter/: edge_wrapper.h  granter.c
examples/tests/long-nop/: long-nop.s
examples/tests/message/: edge_wrapper.c  message.c
examples/tests/receiver/: edge_wrapper.c  edge_wrapper.h  receiver.c
examples/tests/snapshot/: snapshot.c
include/app/: syscall.h
include/common/: sha256.h
include/edge/: edge_call.h  edge_common.h  edge_syscall.h
include/host/: ElfFile.hpp  Enclave.hpp  Error.hpp  KeystoneDevice.hpp  Memory.hpp  Params.hpp  common.h  elf.h  elf32.h  elf64.h  hash_util.hpp  keystone_user.h
include/loader/: loader.h  printf.h  vm.h
include/verifier/: Keys.hpp  Report.hpp  report.h
lib/app/: Makefile
lib/app/include/: h2ecall.h  string.h  syscall.h
lib/app/src/: h2ecall.c  string.c  syscall.c
lib/edge/: Makefile
lib/edge/include/: edge_call.h  edge_syscall.h
lib/edge/src/: edge_dispatch.c  edge_syscall.c
lib/host/: Makefile
lib/host/include/: Keystone.h  KeystoneDevice.h  Memory.h  Memory.hpp  Params.h  Params.hpp  common.h  hash_util.h  keystone.h  keystone_user.h  memory.h  page.h  params.h  sha3.h
lib/host/src/: Keystone.cpp  KeystoneDevice.cpp  Memory.cpp  keystone.cpp  memory.cpp  sha3.cpp
lib/verifier/: Makefile
loader/: loader.lds
loader/inc/: printf.h  string.h  vm_defs.h
loader/src/: elf.c  loader.S  loader.c  sbi.c  string.c
src/: CMakeLists.txt
src/app/: string.c  syscall.c
src/common/: sha256.c  sha3.c
src/edge/: edge_call.c  edge_dispatch.c  edge_syscall.c
src/host/: CMakeLists.txt  ElfFile.cpp  Elfloader.cpp  Enclave.cpp  KeystoneDevice.cpp  LibraryEnclave.cpp  Memory.cpp  PhysicalEnclaveMemory.cpp  SimulatedEnclaveMemory.cpp  elf.c  elf32.c  elf64.c  hash_util.cpp  loader.s  toy.c  toy.out  toy.s
src/loader/: CMakeLists.txt  Makefile  loader.S  loader.c  printf.c
src/verifier/: CMakeLists.txt  Report.cpp  report.cpp
src/verifier/ed25519/: fe.c  ge.c  keypair.c  sc.c  sign.c  verify.c
tests/: CMakeLists.txt  edge_wrapper.cpp  keystone_test.cpp  test-measure.cpp  test-runner.cpp
tests/scripts/: setup_binary.sh
